fix for postgres sql dialect; fix open api
